# web-plugins

./: .gitignore  .travis.yml  ClckPlugin.hs  Core.hs  DefaultTheme.hs  Main.hs  MainDyn.hs  MyPlugin.hs  Theme.hs  default.nix  notes.md  shell.nix  web-plugin.cabal  web-plugins.cabal
Web/Plugin/: Core.hs
Web/Plugins/: Core.hs
example/: ClckPlugin.hs  Core.hs  DefaultTheme.hs  Main.hs  MainDyn.hs  MyPlugin.hs  Theme.hs  cabal.project  default.nix  shell.nix  web-plugins-example.cabal
web-plugins/: shell.nix  web-plugins.cabal
web-plugins-dynamic/: web-plugins-dynamic.cabal
web-plugins-dynamic/Web/Plugins/: Dynamic.hs
web-plugins/Web/Plugins/: Core.hs
