name:                web-plugins
version:             0.2.9
synopsis:            dynamic plugin system for web applications
homepage:            https://github.com/clckwrks/web-plugins
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC==8.0.1

source-repository head
    type:     git
    location: git://github.com/clckwrks/web-plugins.git

library
  exposed-modules:     Web.Plugins.Core
  build-depends:       base        > 4    && < 5,
                       stm        >= 2.3  && < 2.5,
                       mtl        >= 2.1  && < 2.3,
                       text       >= 0.11 && < 1.3,
                       containers >= 0.4  && < 0.6
