name:                web-plugins-example
version:             0.1.0.0
synopsis:            A demo of the web-plugins system
description:         Contains a primitive example of using web-plugins
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag example
  Description: Enable the example
  Default: False
  Manual: True

executable web-plugins-example
  default-language: Haskell2010
  main-is:             Main.hs
  other-modules:       ClckPlugin,
                       Core,
                       DefaultTheme,
                       MyPlugin,
                       Theme
  if flag(example)
    Buildable: True
  else
    Buildable: False
  build-depends:       acid-state       >= 0.11 && < 0.17,
                       base             >= 4.6 && < 5,
                       containers       >= 0.5 && < 0.7,
                       happstack-hsp    >= 7.2 && < 7.4,
                       happstack-server >= 7.3 && < 7.7,
                       hsx2hs           >= 0.13 && < 0.15,
                       mtl              >= 2.1 && < 2.3,
                       hsp              >= 0.9 && < 0.11,
                       safecopy         >= 0.8 && < 0.11,
                       text             >= 0.11 && < 1.3,
                       web-plugins      == 0.3.*,
                       web-routes       == 0.27.*,
                       web-routes-th    == 0.22.*
