name:                web-plugins-dynamics
version:             0.1.0.0
synopsis:            dynamic plugin system for web applications
description:         this package adds support for using plugins for runtime loading of plugins
homepage:            http://www.happstack.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Web.Plugins.Dynamic
  build-depends:       base        >= 4 && <5,
                       text        == 0.11.*,
                       web-plugins == 0.1.*,
                       plugins     == 1.5.*
